fix: prevented logo overlap in section 5

--- a/styles/main.css
+++ b/styles/main.css
@@ -42,7 +42,7 @@ main {
     width:100%;
     height:50vh;
     display:flex;
-    padding-bottom: 10px;
+    padding-bottom: 0.625em;
     font-size: larger;
 }
 .footer-left{
@@ -59,7 +59,7 @@ main {
 }
 .footer-left img{
     height:25vh;
-    width: auto;
+    width: 80%;
     padding: 1%;
     margin-left: 10%;
     
@@ -67,7 +67,7 @@ main {
 .footer-right img{
     filter: invert(100%);
     height:5vh;
-    margin-right: 10px;
+    margin-right: 0.625em;
 }
 .footer-right a{
     text-decoration: none;
@@ -79,7 +79,7 @@ main {
     display:flex;
     align-items:center ;
     justify-content: left;
-    padding-left: 10px;
+    padding-left: 0.625em;
 }
 .footer-right p{
     font-weight: 500;
