--- a/styles/section3.css
+++ b/styles/section3.css
@@ -4,22 +4,24 @@
   padding-bottom: 8vh;
     .sec3-img{
         position: relative;
-        padding-bottom: 100px;
+        padding-bottom: 6.25em;
     }
     h1 {
         text-align: left;
         font-size: 7vh;
         color: var(--accent-color-1); 
-        padding-left: 100px;
+        padding-left: 5%;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
     }
     p{
         text-align: center;
-        line-height: 1.6;
+        line-height:auto;
         margin: 0;
         color:#FEFDF8;
-        font-size:35px;
-        padding-left: 100px;
-        padding-right: 100px;
+        font-size:2.188rem;
+        padding-left: 5%;
+        padding-right: 5%;
         text-align: justify;
         overflow-wrap: break-word;
         word-wrap: break-word;
